--- a/xpi/content/css/win8/smallnavbutextra.css
+++ b/xpi/content/css/win8/smallnavbutextra.css
@@ -387,6 +387,13 @@
 		  margin-top: -3px !important;
 		  margin-bottom: -3px !important;
 		}
+		
+		#main-window[defaultfxtheme="true"] #urlbar,
+		#main-window[defaultfxtheme="true"] .searchbar-textbox,
+		#main-window[defaultfxtheme="true"] #urlbar:not(:-moz-lwtheme)[focused],
+		#main-window[defaultfxtheme="true"] .searchbar-textbox:not(:-moz-lwtheme)[focused] {
+		  box-shadow: unset !important;
+		}
 
 	}
 	/* END: urlbar border tweaking (default theme does not provide left urlbar border) */
