--- a/xpi/content/css/alt_appbutton_icons5.css
+++ b/xpi/content/css/alt_appbutton_icons5.css
@@ -5,4 +5,10 @@
 	#ctraddon_appbutton > .toolbarbutton-icon {
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/appbutton-grey.png") !important;
 	}
+	@media (min-resolution: 1.1dppx) {
+		#ctraddon_appbutton > .toolbarbutton-icon {
+		  list-style-image: url("chrome://classic_theme_restorer/content/images/appbutton-grey_32.png") !important;
+		  width: 31px !important;
+		}
+	}
 }
