--- a/xpi/content/css/alt_appbutton_icons6.css
+++ b/xpi/content/css/alt_appbutton_icons6.css
@@ -10,4 +10,10 @@
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/Toolbar-inverted.png") !important;
 	  -moz-image-region: rect(0px, 486px, 18px, 468px) !important;
 	}
+	
+	@media (min-resolution: 1.1dppx) {
+		#ctraddon_appbutton > .toolbarbutton-icon {
+		  width: 31px !important;
+		}
+	}
 }
