--- a/xpi/content/css/appbutton2io2.css
+++ b/xpi/content/css/appbutton2io2.css
@@ -13,6 +13,13 @@
       margin-bottom: -0.5px !important;
 	}
 	
+	@media (min-resolution: 1.1dppx) {
+		#ctraddon_appbutton2 > .toolbarbutton-icon {
+		  list-style-image: url("chrome://classic_theme_restorer/content/images/appbutton-inv_32.png") !important;
+		  width: 32px !important;
+		}
+	}
+	
 	#ctraddon_appbutton2{
 	  width: 32px !important;
 	}
