--- a/xpi/content/css/close_icon_g_w7.css
+++ b/xpi/content/css/close_icon_g_w7.css
@@ -13,6 +13,23 @@
 *:not(#TabsToolbar):not(.tab-content) > .close-icon:hover:active {
   -moz-image-region: rect(0, 48px, 16px, 32px) !important;
 }
+
+@media (min-resolution: 1.1dppx) {
+	#sidebar-close .toolbarbutton-icon,
+	*:not(#TabsToolbar):not(.tab-content) > .close-icon{
+	  -moz-image-region: rect(0, 32px, 32px, 0) !important;
+	  list-style-image: url("chrome://classic_theme_restorer/content/images/close@2x.png") !important;
+	}
+	#sidebar-close:hover .toolbarbutton-icon,
+	*:not(#TabsToolbar):not(.tab-content) > .close-icon:hover{
+	  -moz-image-region: rect(0, 64px, 32px, 32px) !important;
+	}
+	#sidebar-close:hover:active .toolbarbutton-icon,
+	*:not(#TabsToolbar):not(.tab-content) > .close-icon:hover:active {
+	  -moz-image-region: rect(0, 96px, 32px, 64px) !important;
+	}
+}
+
 #sidebar-close .toolbarbutton-icon,
 *:not(#TabsToolbar):not(.tab-content) > .close-icon > .toolbarbutton-icon {
   width: 16px !important;
