--- a/xpi/content/css/close_icon_t_w7.css
+++ b/xpi/content/css/close_icon_t_w7.css
@@ -40,6 +40,35 @@
 	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
 	}
 	
+	@media (min-resolution: 1.1dppx) {
+		#navigator-toolbox #TabsToolbar :-moz-any(#tabs-closebutton,#ctraddon_tabs-closebutton,#tabmix-tabs-closebutton){
+		  -moz-image-region: rect(0, 32px, 32px, 0) !important;
+		  list-style-image: url("chrome://classic_theme_restorer/content/images/close@2x.png") !important;
+		}
+		#navigator-toolbox #TabsToolbar :-moz-any(#tabs-closebutton,#ctraddon_tabs-closebutton,#tabmix-tabs-closebutton):hover{
+		  -moz-image-region: rect(0, 64px, 32px, 32px) !important;
+		}
+		#navigator-toolbox #TabsToolbar :-moz-any(#tabs-closebutton,#ctraddon_tabs-closebutton,#tabmix-tabs-closebutton):hover:active {
+		  -moz-image-region: rect(0, 96px, 32px, 64px) !important;
+		}
+		
+		#main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab:not([pinned]):not([protected]):not([autoReload]) .tab-close-button {
+		  -moz-image-region: rect(0, 128px, 32px, 96px) !important;
+		  list-style-image: url("chrome://classic_theme_restorer/content/images/close@2x.png") !important;
+		}
+		#main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab:not([pinned]):not([protected]):not([autoReload]) .tab-close-button:hover,
+		#main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab:not([pinned]):not([protected]):not([autoReload]) .tab-close-button:hover[selected="true"] {
+		  -moz-image-region: rect(0, 64px, 32px, 32px) !important;
+		}
+		#main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab:not([pinned]):not([protected]):not([autoReload]) .tab-close-button:hover:active,
+		#main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab:not([pinned]):not([protected]):not([autoReload]) .tab-close-button:hover:active[selected="true"] {
+		  -moz-image-region: rect(0, 96px, 32px, 64px) !important;
+		}
+		#main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab:not([pinned]):not([protected]):not([autoReload]) .tab-close-button[selected="true"] {
+		  -moz-image-region: rect(0, 32px, 32px, 0) !important;
+		}
+	}
+	
 	#main-window #navigator-toolbox #TabsToolbar #tabbrowser-tabs .tabbrowser-tab .tab-close-button{
 	  opacity: 1.0 !important;
 	}
