--- a/xpi/content/css/win8/overlayextra.css
+++ b/xpi/content/css/win8/overlayextra.css
@@ -8,6 +8,15 @@
 	#ctraddon_bookmarks-button:-moz-lwtheme-brighttext{
 	  list-style-image: url("chrome://classic_theme_restorer/content/images/bookmarks-inv.png");
 	}
+	
+	@media (min-resolution: 1.1dppx) {
+		#ctraddon_bookmarks-menu-toolbar-button:not(:-moz-lwtheme) .toolbarbutton-icon,
+		#ctraddon_bookmarks-button:not(:-moz-lwtheme) .toolbarbutton-icon{
+		  -moz-image-region: rect(0px, 32px, 32px, 0);
+		  list-style-image: url(chrome://classic_theme_restorer/content/images/bookmarks_menu.png);
+		  width: 16px !important;
+		}
+	}
 
 	/* fallback images for non-default theme */
 	#ctraddon_history-menu-toolbar-button,
@@ -232,6 +241,17 @@
 	}
 	#appmenu-popup #appmenu_addons{
 	  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_addons.png");
+	}
+	
+	@media (min-resolution: 1.1dppx) {
+		#appmenu-popup #appmenu_newPrivateWindow{
+		  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_private@2x.png");
+		  width: 16px !important;
+		}
+		#appmenu-popup #appmenu_addons{
+		  list-style-image:url("chrome://classic_theme_restorer/content/images/appmenu_addons@2x.png");
+		  width: 16px !important;
+		}
 	}
 
 	#main-window[defaultfxtheme="true"] #appmenuPrimaryPane {
