--- a/xpi/content/css/padlock_extra.css
+++ b/xpi/content/css/padlock_extra.css
@@ -14,7 +14,7 @@
 	#main-window:not([defaultfxtheme="true"]) #urlbar #connection-icon{
 	  width: 16px !important;
 	}
-	#main-window:not([defaultfxtheme="true"]) #urlbar *:not(.verifiedDomain):not(.verifiedIdentity):not(.insecureLoginForms):not(.mixedActiveContent):not(.weakCipher):not(.mixedDisplayContent):not(.mixedDisplayContentLoadedActiveBlocked):not(.mixedActiveBlocked) #connection-icon:not([scr]){
+	#main-window:not([defaultfxtheme="true"]) #urlbar *:not(.verifiedDomain):not(.verifiedIdentity):not(.insecureLoginForms):not(.mixedActiveContent):not(.weakCipher):not(.mixedDisplayContent):not(.mixedDisplayContentLoadedActiveBlocked):not(.mixedActiveBlocked):not(.certUserOverridden) #connection-icon:not([scr]){
 	  width: 0px !important;
 	}
 
