--- a/xpi/content/css/padlock_amo.css
+++ b/xpi/content/css/padlock_amo.css
@@ -2,21 +2,17 @@
 @-moz-document url(chrome://browser/content/browser.xul) {
 
 	/* Firefox 45+ */
-	#urlbar[pageproxystate="valid"] .verifiedDomain #connection-icon,
-	#urlbar[pageproxystate="valid"] .verifiedIdentity #connection-icon {
+	#urlbar[pageproxystate="valid"] :-moz-any(.verifiedDomain,.verifiedIdentity) #connection-icon {
 	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_amo.png) !important;
 	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
 	}
 	
-	#urlbar[pageproxystate="valid"] .insecureLoginForms #connection-icon,
-	#urlbar[pageproxystate="valid"] .mixedActiveContent #connection-icon {
+	#urlbar[pageproxystate="valid"] :-moz-any(.insecureLoginForms,.mixedActiveContent,.notSecure) #connection-icon {
 	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_amo_mal.png) !important;
 	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
 	}
 
-	#urlbar[pageproxystate="valid"] .weakCipher #connection-icon,
-	#urlbar[pageproxystate="valid"] .mixedDisplayContent #connection-icon,
-	#urlbar[pageproxystate="valid"] .mixedDisplayContentLoadedActiveBlocked #connection-icon {
+	#urlbar[pageproxystate="valid"] :-moz-any(.weakCipher,.mixedDisplayContent,.mixedDisplayContentLoadedActiveBlocked,.certUserOverridden) #connection-icon {
 	  list-style-image: url(chrome://classic_theme_restorer/content/images/padlock_amo_mpl.png) !important;
 	  -moz-image-region: rect(0, 16px, 16px, 0) !important;
 	}
